--- a/src/app/features/components/file-browser/nautilus/nautilus.component.html
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.html
@@ -1,9 +1,4 @@
-<mat-sidenav-container
-  class="nautilus-overlay-pane"
-  autosize
-  animate.enter="slide-overlay-enter"
-  cdkDropListGroup
->
+<mat-sidenav-container class="nautilus-overlay-pane" autosize cdkDropListGroup>
   <mat-sidenav
     #sidenav
     [mode]="sidenavMode()"
