--- a/src/animations.scss
+++ b/src/animations.scss
@@ -541,7 +541,7 @@
 }
 
 .slide-overlay-leave {
-  animation: slideOverlayOut 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94) backwards;
+  animation: slideOverlayOut 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
 .fade-in-out-enter {
