--- a/src/app/shared/remote-config/remote-config-step/remote-config-step.component.html
+++ b/src/app/shared/remote-config/remote-config-step/remote-config-step.component.html
@@ -4,9 +4,9 @@
     [style.height.px]="700"
     class="virtual-scroll-viewport"
   >
-    <div *cdkVirtualFor="let field of formFields(); trackBy: trackByField">
-      @if (field.type === 'basic-info') {
-        <div class="basic-section">
+    <div class="form-container">
+      <ng-container *cdkVirtualFor="let field of formFields(); trackBy: trackByField">
+        @if (field.type === 'basic-info') {
           <mat-form-field appearance="fill">
             <mat-label>Remote Name</mat-label>
             <input
@@ -59,18 +59,16 @@
               }
             </mat-autocomplete>
           </mat-form-field>
-        </div>
-      }
+        }
 
-      @if (field.type === 'basic-info' && isLoading()) {
-        <div class="loading-container">
-          <mat-spinner diameter="30"></mat-spinner>
-          <span>Loading configuration options...</span>
-        </div>
-      }
+        @if (field.type === 'basic-info' && isLoading()) {
+          <div class="loading-container">
+            <mat-spinner diameter="30"></mat-spinner>
+            <span>Loading configuration options...</span>
+          </div>
+        }
 
-      @if (field.type === 'config-toggles') {
-        <div class="config-toggles">
+        @if (field.type === 'config-toggles') {
           <mat-slide-toggle (change)="toggleAdvancedOptions()" [checked]="showAdvancedOptions()">
             Show Advanced Options
           </mat-slide-toggle>
@@ -78,11 +76,9 @@
           <mat-slide-toggle (change)="toggleInteractiveMode()" [checked]="useInteractiveMode()">
             Use Interactive Configuration
           </mat-slide-toggle>
-        </div>
-      }
+        }
 
-      @if (field.type === 'provider-field' && providerField(); as pField) {
-        <div class="provider-section">
+        @if (field.type === 'provider-field' && providerField(); as pField) {
           <mat-form-field appearance="fill">
             <mat-label>{{ pField.Help || 'Authentication Method' }}</mat-label>
             <input
@@ -110,35 +106,35 @@
               <mat-error>Provider is required</mat-error>
             }
           </mat-form-field>
-        </div>
-      }
-
-      @if (field.type === 'basic-fields') {
-        @for (item of basicFields(); track item.Name) {
-          <app-setting-control
-            [option]="item"
-            [formControlName]="item.Name"
-            (valueChanged)="onFieldChanged(item.Name, $event)"
-          ></app-setting-control>
         }
-      }
 
-      @if (field.type === 'advanced-section') {
-        <div class="advanced-section">
-          <h3 class="section-heading">
-            Advanced Options
-            <span>{{ advancedFields().length }}</span>
-          </h3>
-
-          @for (item of advancedFields(); track item.Name) {
+        @if (field.type === 'basic-fields') {
+          @for (item of basicFields(); track item.Name) {
             <app-setting-control
               [option]="item"
               [formControlName]="item.Name"
               (valueChanged)="onFieldChanged(item.Name, $event)"
             ></app-setting-control>
           }
-        </div>
-      }
+        }
+
+        @if (field.type === 'advanced-section') {
+          <div class="advanced-section">
+            <h3 class="section-heading">
+              Advanced Options
+              <span>{{ advancedFields().length }}</span>
+            </h3>
+
+            @for (item of advancedFields(); track item.Name) {
+              <app-setting-control
+                [option]="item"
+                [formControlName]="item.Name"
+                (valueChanged)="onFieldChanged(item.Name, $event)"
+              ></app-setting-control>
+            }
+          </div>
+        }
+      </ng-container>
     </div>
   </cdk-virtual-scroll-viewport>
 </form>
