--- a/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
+++ b/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
@@ -93,15 +93,15 @@
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
-      width: auto;
-      height: auto;
+      width: 90vw;
+      height: 90vh;
     }
 
     .video-content {
       max-width: 100%;
       max-height: 100%;
-      width: auto;
-      height: auto;
+      width: 90vw;
+      height: 90vh;
       background: var(--secondary-background);
     }
 
