--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -66,7 +66,13 @@
                       (startJob)="
                         startJob.emit({ type: $event.type, remoteName: $event.remoteName })
                       "
-                      (stopJob)="stopJob.emit({ type: $event.type, remoteName: $event.remoteName })"
+                      (stopJob)="
+                        stopJob.emit({
+                          type: $event.type,
+                          remoteName: $event.remoteName,
+                          profileName: $event.profileName,
+                        })
+                      "
                       role="region"
                       aria-labelledby="remotes-panel-title"
                     >
